data/derived/comb/progs/unify/prog7838.ml.out
Characters 66-110:
  (((mult(m,n)+y)/10), [(mult(m,n)+y) mod 10]) @ z
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
